--- a/example.env
+++ b/example.env
@@ -2,7 +2,7 @@
 SESSION_NAME= Your Session
 
 # Your music bot username
-BOT_USERNAME=
+BOT_USERNAME=ZEYADZAGLOLABOT
 
 # Your Bot Token
 BOT_TOKEN=
@@ -14,25 +14,25 @@ API_ID=
 API_HASH=
 
 # List of user IDs separated by space (you can fill this with your id too)
-SUDO_USERS=1970797144 
+SUDO_USERS=5154162181 5533046020 
 
 # in minutes (default:40)
 DURATION_LIMIT=240 
 
 # if you have channel, fill the channel username here without @
-UPDATES_CHANNEL=FA9SH
+UPDATES_CHANNEL=AzkarMusIim1
 
 # # if you have group, fill the group username here without @
-GROUP_SUPPORT=S150D
+GROUP_SUPPORT=BAR_ZEZO
 
 # fill with the assistant username without @
-ASSISTANT_NAME=SHADOW_MUSIC0
+ASSISTANT_NAME=⌯ 𓆩✘𝒁𝑬𝒁𝑶 𖤐 ™𝑲𝑨𝑹𝑴𝑶𝒁✘𓆪 ⌯
 
 # fill with username of your telegram account
-OWNER_NAME=KB_Shadow
+OWNER_NAME=ZEYADZAGLOL
 
 # fill with nickname/name of your telegram account
-ALIVE_NAME=𝑺𝑯𝑨𝑫𝑶𝑾 𝑴𝑼𝑺𝑰𝑪
+ALIVE_NAME=𝑹𝑶𝑶𝒁 𝑴𝑼𝑺𝑰𝑪
 
 # fill with nickname/name of your telegram account
 BOT_PHOTO=
